--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,46 @@
 
+    <div id="root">
+
+        <div class="App">
+            <!--<Header>-->
+                <app-header></app-header>
+            <!--</Header>-->
+
+            <div class="container">
+
+                <div class="row">
+
+                    <app-side-bar></app-side-bar>
+
+                    <div class="col-md-9">
+                        <!--<Carousel>-->
+                            <app-carousel></app-carousel>
+                        <!--</Carousel>-->
+                        <div class="row">
+                            <!--<ProductDetail>-->
+                                <app-product-detail></app-product-detail>
+                            <!--</ProductDetail>-->
+
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="container">
+
+                <hr />
+
+
+                <!--<Footer>-->
+                <app-footer></app-footer>
+                <!--</Footer>-->
+            </div>
+        </div>
+
+
+
+    </div>
