--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -3,12 +3,13 @@
         <img src="http://placehold.it/320x150" alt="" />
         <div class="caption">
             <h4><a href="#">{{product.name}}</a>
-            <h4 class="pull-right">{{product.price}}</h4>
+                <h4 class="pull-right">{{product.price}}</h4>
 
             </h4>
             <p>{{product.description}} <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp -
                     http://bootsnipp.com</a>.</p>
         </div>
+        <button type="submit" name="submit"> Add To Cart </button>
         <div class="ratings">
             <p class="pull-right">{{product.reviews}}</p>
             <p>
