--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
                         <!--</Carousel>-->
                         <div class="row">
                             <!--<ProductDetail>-->
-                                <app-product-detail (productBuy)="productWasAdded($event)" *ngFor='let product of products' [product] = 'product'></app-product-detail>
+                                <app-product-detail (productAdded)="productWasAdded($event)" *ngFor='let product of products' [product] = 'product'></app-product-detail>
                             <!--</ProductDetail>-->
 
 
