--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
                     <a href="#">Contact</a>
                 </li>
                 <li >
-                    <a href="#">Items in Cart {{shoppingCart}} </a>
+                    <a href="#">Items in Cart {{shoppingCart.length}} </a>
                 </li>
             </ul>
         </div>
