--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -5,20 +5,14 @@
             <h4><a href="#">{{product.name}}</a>
                 <h4 class="pull-right">{{product.price}}</h4>
 
+
             </h4>
             <p>{{product.description}} <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp -
                     http://bootsnipp.com</a>.</p>
         </div>
         <button (click)="productBuy()" type="submit" name="submit"> Add To Cart </button>
-        <div class="ratings">
-            <p class="pull-right">{{product.reviews}}</p>
-            <p>
-                <span class="glyphicon glyphicon-star"></span>
-                <span class="glyphicon glyphicon-star"></span>
-                <span class="glyphicon glyphicon-star"></span>
-                <span class="glyphicon glyphicon-star"></span>
-                <span class="glyphicon glyphicon-star-empty"></span>
-            </p>
-        </div>
+        <app-reviews [rating]="product.rating"></app-reviews>
+        <p class="pull-right">{{product.reviews}}</p>
+
     </div>
 </div>
